--- a/app/res/layout/dialog_fragment.xml
+++ b/app/res/layout/dialog_fragment.xml
@@ -19,15 +19,16 @@
     android:layout_height="match_parent" 
     android:layout_width="match_parent"
     android:background="#D8DCE3" 
+    android:id="@+id/svParentURLFragment"
     >
 	<RelativeLayout
 	    android:id="@+id/rlDialogFragment" 
 	    android:layout_height="wrap_content" 
 	    android:layout_width="match_parent" 
-	    android:layout_gravity="center_vertical|center_horizontal"
+	    android:layout_gravity="center_horizontal|center_vertical"
 	    android:layout_marginLeft="10dp"
 	    android:layout_marginRight="10dp"
-	    android:background="@drawable/dialog_box"
+	    
 	    >
 	    <TextView
 	        android:id="@+id/tvDialogFragment"
@@ -50,26 +51,28 @@
 	 	    android:id="@+id/llDialogFragment"
 	 	    android:layout_height="wrap_content"
 	 	    android:orientation="horizontal"
+	 	    android:weightSum="1"
 	 	    android:layout_width="match_parent"
 	 	    android:layout_below="@id/edDialogFragment"
-	 	    style="?android:attr/buttonBarStyle"
 	 	    android:layout_marginTop="10dp"
+	 	    
 	 	    >
-		 	
-			<Button 
+		 	 <Button 
 		 	    android:id="@+id/btnClearDialogFragment"
 		 	    android:layout_width="0dp"
 		 	    android:layout_height="wrap_content"
 		 	    android:layout_weight="0.5"
 		 	    android:text="@string/clearButtonText"
-		 	    style="?android:attr/borderlessButtonStyle"/>
-			<Button 
+		 	    style="?android:attr/buttonStyle"	 	    
+		 	 />
+		 	<Button 
 		 	    android:id="@+id/btnOkayDialogFragment"
 		 	    android:layout_width="0dp"
 		 	    android:layout_height="wrap_content"
 		 	    android:layout_weight="0.5"
 		 	    android:text="@string/okButtonText"
-		 	    style="?android:attr/borderlessButtonStyle"/>    
+		 	    style="?android:attr/buttonStyle"
+		 	    />      
 	 	</LinearLayout>
 	 	
 	</RelativeLayout>
