--- a/app/res/layout/about_us.xml
+++ b/app/res/layout/about_us.xml
@@ -16,7 +16,7 @@
 -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#D8DCE3"
+    android:background="@drawable/default_bg"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_height="match_parent">
