--- a/app/res/layout/activity_main_tab.xml
+++ b/app/res/layout/activity_main_tab.xml
@@ -17,15 +17,15 @@
 <TabHost
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/tabhost"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/default_bg">
 
     <LinearLayout
         android:id="@+id/llMainActivityLayout"
         android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:background="#D8DCE3"
-        android:layout_height="fill_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <FrameLayout
             android:id="@android:id/tabcontent"
@@ -38,9 +38,8 @@
        <TabWidget
             android:id="@android:id/tabs"
             android:orientation="horizontal"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="5dp"
             android:layout_weight="0"/>
 
     </LinearLayout>
