--- a/app/res/layout/dialog_fragment.xml
+++ b/app/res/layout/dialog_fragment.xml
@@ -18,7 +18,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_height="match_parent" 
     android:layout_width="match_parent"
-    android:background="#D8DCE3" 
+    android:background="@drawable/default_bg" 
     android:id="@+id/svParentURLFragment"
     >
 	<RelativeLayout
