--- a/app/res/layout/welcome_splash_screen.xml
+++ b/app/res/layout/welcome_splash_screen.xml
@@ -17,7 +17,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D8DCE3"
+    android:background="@drawable/default_bg"
     android:id="@+id/rlSplash"
     android:orientation="vertical" >
 
