Added Royalty free icons and changed tab spacing

--- a/app/res/layout/tabs_icon.xml
+++ b/app/res/layout/tabs_icon.xml
@@ -17,7 +17,7 @@
     android:layout_width="match_parent"
 	android:layout_height="0dip"
 	android:layout_weight="1"
-	android:background="#C9CDD4" 
+	android:background="@android:color/transparent" 
 	android:id="@+id/llTabIcon"
 	>
 	<LinearLayout 
