--- a/app/res/layout/activity_main_tab.xml
+++ b/app/res/layout/activity_main_tab.xml
@@ -19,7 +19,7 @@
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/default_bg">
+    android:background="@android:color/transparent">
 
     <LinearLayout
         android:id="@+id/llMainActivityLayout"
