--- a/app/res/layout/scan_fragment.xml
+++ b/app/res/layout/scan_fragment.xml
@@ -1,13 +1,50 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:id="@+id/llScanFragment">
-    
-    <fragment
-        android:id="@+id/scanner"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+ Copyright (C) 2008 ZXing authors
 
-</LinearLayout>
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relative"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+   <FrameLayout
+       android:id="@+id/frameLayout"
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentRight="true"
+       android:layout_alignParentTop="true" >
+
+       <SurfaceView
+           android:id="@+id/cameraView"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+	   </SurfaceView>
+	   
+       <org.openmidaas.app.activities.qrsupport.ViewfinderView
+           android:id="@+id/viewFinder_View"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" />
+	   <TextView 
+			android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+			android:text="@string/qrScanMessage"
+			android:layout_gravity="bottom|center"
+			android:textColor="@android:color/white"
+			android:paddingBottom="7dp"
+		/>
+    </FrameLayout>
+	
+</RelativeLayout>
