--- a/app/res/menu/activity_main_tab.xml
+++ b/app/res/menu/activity_main_tab.xml
@@ -20,10 +20,15 @@
         android:orderInCategory="100"
         android:title="@string/revokePermission"
         android:showAsAction="collapseActionView"/>
-      <item
+    <item
         android:id="@+id/about_us"
         android:orderInCategory="100"
         android:title="@string/aboutUs"
         android:showAsAction="collapseActionView"/>
-
+	<item
+        android:id="@+id/register_push"
+        android:orderInCategory="100"
+        android:title="@string/registerPush"
+        android:showAsAction="collapseActionView"/>
+    
 </menu>
