--- a/app/res/layout/titlebar.xml
+++ b/app/res/layout/titlebar.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="Your Info"
+        android:text="@string/yourInfo"
         android:textColor="#FFFFFF"
         android:textSize="22sp" />
 </RelativeLayout>
